--- a/Card.html
+++ b/Card.html
@@ -53,17 +53,14 @@
         </table>
     </div>
     <script>
-        const pn=sessionStorage.getItem("pn");
-        const quantity=sessionStorage.getItem("quantity");
-        const sl=sessionStorage.getItem("sl");
+        const pn=sessionStorage.getItem("pn1");
+        const quantity=sessionStorage.getItem("quantity1");
+        const sl=sessionStorage.getItem("sl1");
 
         document.getElementById("pn").innerHTML=pn;
         document.getElementById("quantity").innerHTML=quantity;
         document.getElementById("sl").innerHTML=sl;
 
-        <!-- function remove(){
-            sessionStorage.removeItem('pn')
-        } -->
        
 
     </script>
