--- a/Home.html
+++ b/Home.html
@@ -262,9 +262,9 @@
                         let qty=parseInt(txtQty.value,10);
                         qty=isNaN(qty)?0:qty;
                         if(qty>0){
-                            sessionStorage.setItem("pn",pn)
-                            sessionStorage.setItem("quantity",qty)
-                            sessionStorage.setItem("sl",sl)
+                            sessionStorage.setItem("pn1",pn)
+                            sessionStorage.setItem("quantity1",qty)
+                            sessionStorage.setItem("sl1",sl)
                             window.location="Card.html";
                         }
                         else{
