--- a/Card.html
+++ b/Card.html
@@ -60,6 +60,7 @@
 
 
         let qu=parseInt(quantity.value,10);
+        qu=isNaN(qty)?0:qu;
         console.log(qu)
 
         document.getElementById("pn").innerHTML=pn;
