--- a/Card.html
+++ b/Card.html
@@ -61,6 +61,13 @@
 
         let qu=parseInt(quantity.value,10);
         qu=isNaN(qty)?0:qu;
+        if(qu>0){
+            console.log(qu)
+        }
+        else{
+            console.log(qu)
+        }
+
         console.log(qu)
 
         document.getElementById("pn").innerHTML=pn;
